--- a/luminoracore-sdk-python/pyproject.toml
+++ b/luminoracore-sdk-python/pyproject.toml
@@ -4,8 +4,8 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "luminoracore-sdk"
-version = "1.0.0"
-description = "Advanced Python SDK for LuminoraCore personality management"
+version = "1.1.0"
+description = "Advanced Python SDK for LuminoraCore personality management with memory and relationship features"
 readme = "README.md"
 license = {file = "LICENSE"}
 authors = [
