--- a/luminoracore-sdk-python/pyproject.toml
+++ b/luminoracore-sdk-python/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "luminoracore-sdk"
-version = "1.1.1"
+version = "1.1.2"
 description = "Advanced Python SDK for LuminoraCore personality management with memory and relationship features"
 readme = "README.md"
 license = {file = "LICENSE"}
@@ -92,6 +92,9 @@ Changelog = "https://github.com/luminoracore/sdk-python/blob/main/CHANGELOG.md"
 [tool.setuptools.packages.find]
 where = ["."]
 include = ["luminoracore*"]
+
+[tool.setuptools.package-data]
+luminoracore_sdk = ["personalities/*.json"]
 
 [tool.black]
 line-length = 88
